# cuda-Projects

./: .gitignore
CudaHelloWorld/: CMakeLists.txt  Readme.md  hello.cu
CudaTest/: kernel.cu
DataTransportation/: kernel.cu
